--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en-us">
+  <head>
     <title>Mongo Scraper</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/paper/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
-
-<body>
-
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Mongo Scraper</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="/articles">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">Saved Articles</a>
-                    </li>
-                    <li>
-                        <a class="btn btn-default scrape-new">SCRAPE NEW ARTICLES!</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="jumbotron text-center">
-        <div class="overlay">
-        </div>
-        <div class="background-image">
-        </div>
-        <div class="caption">
-            <h1>Mongo Scraper</h1>
-            <p>New York Times Edition</p>
-        </div>
-    </div>
-    <div class="container" id="articles"></div>
-
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script> -->
-    <!-- <script src="../../assets/javascript/index.js"></script> -->
+  <body>
+      <nav class="navbar navbar-default">
+          <div class="container-fluid">
+              <div class="navbar-header">
+                  <a class="navbar-brand" href="/">Mongo Scraper</a>
+              </div>
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                  <ul class="nav navbar-nav">
+                      <li>
+                          <a  href="/scrape" class="btn btn-default scrape-new">SCRAPE NEW ARTICLES!</a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+      </nav>
+  
+      <div class="jumbotron text-center">
+          <div class="overlay">
+          </div>
+          <div class="background-image">
+          </div>
+          <div class="caption">
+              <h1>Mongo Scraper</h1>
+              <p>New York Times Edition</p>
+          </div>
+      </div>
+      <div class="container">
+          <div class="panel-heading text-center">
+              <h3>Click on an article to add a note!</h3>
+          </div>
+              <div class="col-md-8" id="articles"></div>
+              <div class="col-md-4" id="notes"></div>
+      </div>
+    <!-- <div id="wrapper">
+      <h1>Note Scraper</h1>
+      <h2><i>If you can do this...the homework should be no problem.</i></h2>
+      <div id="articles"></div>
+      <div id="notes"></div>
+    </div> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
-</body>
-
+  </body>
 </html>
